[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "adarl"
version = "0.0.1"
authors = [
  { name="Carlo Rizzardo", email="cr.git.mail@gmail.com" },
]
description = "Learn-Real gym"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
adarl = "adarl:launcher"

# [tool.setuptools]
# # ...
# # By default, include-package-data is true in pyproject.toml, so you do
# # NOT have to specify this line.
# include-package-data = true
# 
# [tool.setuptools.packages.find]
# where = ["src","src/adarl/models","src/adarl/assets"]

[tool.setuptools.package-data]
"adarl.models" = ["*.urdf", "*.xacro"]
"adarl.assets.audio" = ["*.ogg"]